fixed history/password/wishlist footer and realigned copywrite with the other elements in the column

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,15 +12,16 @@
     position: relative;
     min-height: 90vh;
 }
-/* {.content-wrap
-   /* padding-bottom: 2.5rem;*/
 
+/*.content-wrap{
 
-
+   height: 10rem;
+}
+    */
 
 #twitter-icon-container{
     font-size: 30px;
-    margin-left: -.2rem;
+   /* margin-left: -rem;*/
 }
 #email-icon-container{
     font-size: 28px;
@@ -30,7 +31,7 @@
 .email-icon{
     vertical-align: middle;
     font-size:14px;
-   
+    margin-left: .3rem;
     vertical-align: 8px;
 }
 
@@ -47,10 +48,12 @@
     
     width: 100%;
     margin-top: -1rem;
-   margin-bottom: .5rem;
+     margin-bottom: .5rem;
    
 }
+/*
 .Footer-Bottom{
     -ms-flex-align: center;
     margin-left: 9.5rem;
 }
+*/
